--- a/src/Components/Styles/NewsfeedComponent.css
+++ b/src/Components/Styles/NewsfeedComponent.css
@@ -1,3 +1,47 @@
 .newsfeed-portfolio {
     text-align: left;
 }
+
+.newsfeed-buying-section {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #3b4754;
+    padding: 20px 0px 20px 0px;
+}
+
+
+.newsfeed-market-section {
+    margin-top: 60px;
+}
+
+
+.newsfeed-market-box {
+    height: 13vh;
+    padding: 20px;
+    border: 1px solid #31363a;
+    border-radius: 4px;
+    text-align: left;
+}
+
+.newsfeed-market-box p {
+    color: #7b858a;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin-bottom: 8px;
+}
+
+.newsfeed-popularlists-intro {
+    margin-top: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0 20px 0px;
+
+}
+
+.newsfeed-popularlists-badges {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+}
