--- a/src/Components/Styles/TimeLineComponent.css
+++ b/src/Components/Styles/TimeLineComponent.css
@@ -2,18 +2,28 @@
     border-bottom: 1px solid #42494D;
 }
 
-.timeline__button {
+.btn-link {
+    color: white;
     font-weight: bold;
-    padding: 10px 10px 20px 10px;
-    cursor: pointer;
 }
 
-.timeline__button:hover {
+.btn-link:hover {
     color: #5ac53b;
+    text-decoration: none;
 }
 
-.timeline__button.active {
+.btn-link:active {
     color: #5ac53b;
-    border-bottom: 2px solid #5ac53b;
+    border-bottom: 1px solid #5ac53b;
+}
 
+.btn-link.focus, .btn-link:focus {
+    text-decoration: none;
+    color: #5ac53b;
+    border-bottom: 1px solid #5ac53b;
+}
+
+.btn.focus, .btn:focus {
+    outline: 0;
+    box-shadow: none;
 }
