--- a/src/Components/Styles/NewsfeedComponent.css
+++ b/src/Components/Styles/NewsfeedComponent.css
@@ -25,11 +25,25 @@
 
 .newsfeed-market-box p {
     color: #7b858a;
-    font-size: 15px;
+    font-size: 12px;
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 8px;
 }
+
+.newsfeed-market-box h2 {
+    font-size: 15px;
+    padding-bottom: 20px;
+}
+
+.newsfeed-market-box a {
+    text-decoration: none;
+    font-weight: bold;
+    color: #5ac53b;
+    font-size: 12px;
+    padding-bottom: 10px;
+}
+
 
 .newsfeed-popularlists-intro {
     margin-top: 60px;
